# yz-head

./: .gitignore  README.md  manifest.json  pyproject.toml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: install-to-frontend.mjs
ui/src/: App.tsx  HeadDashboard.tsx  HeadMesh.tsx  index.ts
ui/src/lib/: api.ts  assetBase.ts
yz_head/: __init__.py  __main__.py  observer.py  persistent_settings.py  server.py  settings.py
yz_head/assets/: default_mesh_meta.json
